--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-    "name": "prayer-wall-2",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "ts-node-dev src/index.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.4.4"
-    }
+   "name": "prayer-wall-2",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "dev": "ts-node-dev  --respawn --transpile-only ./src/index.ts",
+      "start": "ts-node src/index.ts"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "devDependencies": {
+      "@types/cors": "^2.8.12",
+      "@types/express": "^4.17.13",
+      "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.1.8",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "apollo-server": "^3.4.0",
+      "apollo-server-express": "^3.4.0",
+      "class-validator": "^0.13.1",
+      "cors": "^2.8.5",
+      "express": "^4.17.1",
+      "graphql": "^15.6.1",
+      "pg": "^8.7.1",
+      "reflect-metadata": "^0.1.10",
+      "type-graphql": "^1.1.1",
+      "typeorm": "0.2.32"
+   }
 }
