--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,7 +7,7 @@
     "database": "prayerwall2",
     "synchronize": true,
     "logging": false,
-    "rewrite": true,
+    "dropSchema": true,
     "entities": ["src/entity/**/*.ts"],
     "migrations": ["src/migration/**/*.ts"],
     "subscribers": ["src/subscriber/**/*.ts"],
