--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-   "name": "prayer-wall-2",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "dev": "ts-node-dev  --respawn --transpile-only ./src/index.ts",
-      "start": "ts-node src/index.ts"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "devDependencies": {
-      "@types/cors": "^2.8.12",
-      "@types/dotenv": "^8.2.0",
-      "@types/express": "^4.17.13",
-      "@types/express-session": "^1.17.4",
-      "@types/node": "^8.0.29",
-      "@types/passport": "^1.0.7",
-      "@types/passport-github": "^1.1.6",
-      "@types/passport-google-oauth20": "^2.0.10",
-      "ts-node": "3.3.0",
-      "ts-node-dev": "^1.1.8",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "apollo-server": "^3.4.0",
-      "apollo-server-express": "^3.4.0",
-      "class-validator": "^0.13.1",
-      "cors": "^2.8.5",
-      "dotenv": "^10.0.0",
-      "express": "^4.17.1",
-      "express-session": "^1.17.2",
-      "graphql": "^15.6.1",
-      "passport": "^0.5.0",
-      "passport-github": "^1.1.0",
-      "passport-google-oauth20": "^2.0.0",
-      "passport-twitter": "^1.0.4",
-      "pg": "^8.7.1",
-      "reflect-metadata": "^0.1.10",
-      "type-graphql": "^1.1.1",
-      "typeorm": "0.2.32"
-   }
+    "name": "prayer-wall-2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev:back": "ts-node-dev  --respawn --transpile-only ./src/index.ts",
+        "dev:front": "npm start --prefix client",
+        "dev": "concurrently \"npm run dev:back\" \"npm run dev:front\"",
+        "start": "ts-node src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/node": "^8.0.29",
+        "@types/passport": "^1.0.7",
+        "@types/passport-github": "^1.1.6",
+        "@types/passport-google-oauth20": "^2.0.10",
+        "concurrently": "^6.3.0",
+        "nodemon": "^2.0.13",
+        "ts-node": "3.3.0",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "3.3.3333"
+    },
+    "dependencies": {
+        "apollo-server": "^3.4.0",
+        "apollo-server-express": "^3.4.0",
+        "class-validator": "^0.13.1",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-session": "^1.17.2",
+        "graphql": "^15.6.1",
+        "passport": "^0.5.0",
+        "passport-github": "^1.1.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-twitter": "^1.0.4",
+        "pg": "^8.7.1",
+        "reflect-metadata": "^0.1.10",
+        "type-graphql": "^1.1.1",
+        "typeorm": "0.2.32"
+    }
 }
