--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^17.0.9",
         "graphql": "^15.6.1",
         "graphql.macro": "^1.4.2",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
@@ -42,5 +43,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/moment": "^2.13.0"
     }
 }
