--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "apollo-server-express": "^3.4.0",
         "class-validator": "^0.13.1",
         "cors": "^2.8.5",
+        "date-fns": "^2.25.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
