--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.4.4",
         "web-vitals": "^1.1.2"
@@ -45,6 +46,7 @@
         ]
     },
     "devDependencies": {
-        "@types/moment": "^2.13.0"
+        "@types/moment": "^2.13.0",
+        "@types/react-router-dom": "^5.3.1"
     }
 }
