--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.4.4",
-        "web-vitals": "^1.1.2"
+        "uuid": "^8.3.2",
+        "web-vitals": "^1.1.2",
+        "zustand": "^3.6.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -47,6 +49,7 @@
     },
     "devDependencies": {
         "@types/moment": "^2.13.0",
-        "@types/react-router-dom": "^5.3.1"
+        "@types/react-router-dom": "^5.3.1",
+        "@types/uuid": "^8.3.1"
     }
 }
