--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "@types/node": "^12.20.33",
         "@types/react": "^17.0.30",
         "@types/react-dom": "^17.0.9",
+        "axios": "^0.24.0",
         "graphql": "^15.6.1",
         "graphql.macro": "^1.4.2",
         "moment": "^2.29.1",
@@ -18,6 +19,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-stripe-checkout": "^2.6.3",
         "typescript": "^4.4.4",
         "uuid": "^8.3.2",
         "web-vitals": "^1.1.2",
@@ -48,6 +50,7 @@
         ]
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/moment": "^2.13.0",
         "@types/react-router-dom": "^5.3.1",
         "@types/uuid": "^8.3.1"
