--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/passport": "^1.0.7",
         "@types/passport-github": "^1.1.6",
         "@types/passport-google-oauth20": "^2.0.10",
+        "@types/stripe": "^8.0.417",
         "concurrently": "^6.3.0",
         "nodemon": "^2.0.13",
         "ts-node": "3.3.0",
@@ -44,6 +45,7 @@
         "passport-twitter": "^1.0.4",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.10",
+        "stripe": "^8.184.0",
         "subscriptions-transport-ws": "^0.9.19",
         "type-graphql": "^1.1.1",
         "typeorm": "0.2.32"
