--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-stripe-checkout": "^2.6.3",
@@ -52,6 +53,7 @@
     "devDependencies": {
         "@types/axios": "^0.14.0",
         "@types/moment": "^2.13.0",
+        "@types/react-icons": "^3.0.0",
         "@types/react-router-dom": "^5.3.1",
         "@types/uuid": "^8.3.1"
     }
