--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,17 @@
         "@types/react": "^17.0.30",
         "@types/react-dom": "^17.0.9",
         "axios": "^0.24.0",
+        "clamp-js": "^0.7.0",
         "graphql": "^15.6.1",
         "graphql.macro": "^1.4.2",
         "moment": "^2.29.1",
         "react": "^17.0.2",
+        "react-clamp-lines": "^3.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-string-clamp": "^0.3.1",
         "react-stripe-checkout": "^2.6.3",
         "typescript": "^4.4.4",
         "uuid": "^8.3.2",
@@ -52,6 +55,7 @@
     },
     "devDependencies": {
         "@types/axios": "^0.14.0",
+        "@types/clamp-js": "^0.7.3",
         "@types/moment": "^2.13.0",
         "@types/react-icons": "^3.0.0",
         "@types/react-router-dom": "^5.3.1",
