Got infinite scroll up on public prayers

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react-clamp-lines": "^3.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-intersection-observer": "^8.32.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-string-clamp": "^0.3.1",
