--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,9 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.4.16",
-        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "@types/jest": "^26.0.24",
         "@types/node": "^12.20.33",
         "@types/react": "^17.0.30",
         "@types/react-dom": "^17.0.9",
@@ -15,6 +14,7 @@
         "clamp-js": "^0.7.0",
         "graphql": "^15.6.1",
         "graphql.macro": "^1.4.2",
+        "jest": "^26.6.3",
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-clamp-lines": "^3.0.2",
@@ -33,7 +33,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
+        "test:watch": "jest --watch",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -55,11 +56,16 @@
         ]
     },
     "devDependencies": {
+        "@babel/preset-typescript": "^7.16.5",
         "@types/axios": "^0.14.0",
         "@types/clamp-js": "^0.7.3",
         "@types/moment": "^2.13.0",
         "@types/react-icons": "^3.0.0",
         "@types/react-router-dom": "^5.3.1",
-        "@types/uuid": "^8.3.1"
+        "@types/uuid": "^8.3.1",
+        "ts-jest": "^26.5.6"
+    },
+    "wallaby": {
+        "autoDetect": true
     }
 }
