--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
         "clamp-js": "^0.7.0",
         "graphql": "^15.6.1",
         "graphql.macro": "^1.4.2",
-        "jest": "^26.6.3",
         "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-clamp-lines": "^3.0.2",
@@ -63,9 +62,17 @@
         "@types/react-icons": "^3.0.0",
         "@types/react-router-dom": "^5.3.1",
         "@types/uuid": "^8.3.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^26.6.0",
         "ts-jest": "^26.5.6"
     },
     "wallaby": {
         "autoDetect": true
+    },
+    "jest": {
+        "loader": "style-loader!css-loader?modules=true",
+        "extensionsToTreatAsEsm": [
+            "module.css"
+        ]
     }
 }
